remove legacy auth (#53)